# ColorCorrectionMatrixSolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: color_correction_application.cpp  color_correction_application.hpp  color_correction_matrix_solver.cpp  color_correction_matrix_solver.hpp  image_data.hpp  image_file_handler.cpp  image_file_handler.hpp  image_loader.cpp  image_loader.hpp  main.cpp
